update source code

--- a/html/tintuc.html
+++ b/html/tintuc.html
@@ -20,7 +20,7 @@
         <div class="header_dau">
           <nav class="navbar navbar-expand-lg navbar-dark bg-info">
             <div class="container">
-              <a class="navbar-brand" href="../html/trangchu.html"><img class="logo-img" src="../img/Bander/logo.png" alt="Logo" width="200px" height="100px"/></a>
+              <a class="navbar-brand" href="../html/index.html"><img class="logo-img" src="../img/Bander/logo.png" alt="Logo" width="200px" height="100px"/></a>
               <div class="collapse navbar-collapse menu" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                   <li class="nav-item"><input style="margin-top: 20px;" class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/><img class="cc" src="../icons/timkiem.svg" style="width: 30px; height: 30px;"></li>
@@ -42,7 +42,7 @@
               <ul class="navbar-nav me-auto mb-5 mb-lg-0" id="menu_1">
                 <li class="nav-item"><img style="width: 30px; height: 30px; margin-top: 18px;" src="../icons/menu.svg"></li>
                 <li class="nav-item"><a class="nav-link" href="../html/sanpham.html" style="margin-left: -60px;">Danh Mục Sản phẩm</a></li>
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../html/trangchu.html">Trang Chủ</a></li>                
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="../html/index.html">Trang Chủ</a></li>                
                 <li class="nav-item"><a class="nav-link" href="../html/gioithieu.html">Giới thiệu</a></li>
                 <li class="nav-item"><a class="nav-link" href="../html/tintuc.html">Tin tức</a></li>
                 <li class="nav-item"><a class="nav-link" href="../html/lienlac.html">Liên lạc</a></li>
@@ -58,7 +58,7 @@
             <div class="bg-light">
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="./trangchu.html" class="text-dark" style="font-weight: bold;">TRANG CHỦ</a></li>
+                  <li class="breadcrumb-item"><a href="./index.html" class="text-dark" style="font-weight: bold;">TRANG CHỦ</a></li>
                   <li class="breadcrumb-item active" aria-current="page" style="font-weight: bold;">TIN TỨC</li>
                 </ol>
               </nav>
@@ -243,7 +243,7 @@
           <div class="container">
             <div class="row justify-content-evenly">
               <div class="col col-lg-3 col-sm-12 col-12 mb-3 order-lg-first">
-                <a class="navbar-brand" href="../html/trangchu.html">
+                <a class="navbar-brand" href="../html/index.html">
                 <img class="fotercuoi" src="../img/Bander/logo.png" alt="Logo" width="250" height="250" /></a>
               </div>
               <div class="col col-lg-3 col-12 mb-3 col-sm-12">
